<resources>
    <string name="app_name">Fridge</string>
    <string name="start">Start</string>
    <string name="zajrzyj">Zajrzyj</string>
    <string name="dodaj_recznie">Dodaj ręcznie</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="profil">Profil</string>
    <string name="spolecznosc">Społeczność</string>
    <string name="udostepnij">Udostępnij</string>
    <string name="ocen_nas">Oceń nas!</string>
</resources>